[package]
name = "api-service-demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # 用来运行 HelloWorld gRPC 服务器的可执行文件
name = "shortlink-server"
path = "src/server.rs"

[dependencies]
tonic = "0.5"
prost = "0.8"
axum = { version = "0.2.3" }
sqlx = { version = "0.5.6", features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.11.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.1", features = ["add-extension", "trace"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
anyhow = "1.0.44"
redis = { version = "0.21", features = ["tokio-comp", "aio"] }

[build-dependencies]
tonic-build = "0.5"